reports and clean up